# Gen_AI_Using_Langchain

./: pyproject.toml  requirements.txt
1-langchain_basics/: QAChatbot.py  langchain_basics.ipynb  tools.ipynb
RAG/: RAG_Basics.ipynb  simplerag.ipynb  speech.txt
